[package]
name = "rusty_secrets"
version = "0.0.3"
authors = ["Frederic Jacobs <github@fredericjacobs.com>", "sellibitze"]
description = "Implementation of threshold Shamir's secret sharing in the Rust programming language."
homepage = "https://github.com/freedomofpress/RustySecrets"
license = "BSD-3-Clause"
readme = "README.md"
build = "build.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-serialize = "^0.3.18"
rand = "^0.3.14"
ring = "^0.12.0"
merkle_sigs = "^1.2.1"
protobuf = "^1.2.0"
base64 = "~0.6.0"
base64-serde = "0.1.1"
